--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,16 @@
     },
     "require-dev": {
         "payum/core": "^1.3@dev",
+        "phpunit/phpunit": "~4.0",
         "php-http/guzzle6-adapter": "^1.0"
     },
     "config": {
         "bin-dir": "bin"
     },
     "autoload": {
-        "psr-0": { "Payum\\cardnethosted": "" }
+        "psr-0": { "liamsorsby\\CardNetHosted": "" }
     },
-    "target-dir": "Payum/cardnethosted",
+    "target-dir": "liamsorsby/CardNetHosted",
     "extra": {
         "branch-alias": {
             "dev-master": "1.3-dev"
